Crash in weld modifier #81467

Closed
opened 2020-10-05 20:49:33 +02:00 by Gregory · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0
Worked: (newest version of Blender that worked as expected)

Exact steps for others to reproduce the error
#81467.blend

  • Open file
  • Enable Weld modifier

Blender Crashes

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` Worked: (newest version of Blender that worked as expected) **Exact steps for others to reproduce the error** [#81467.blend](https://archive.blender.org/developer/F8982678/T81467.blend) - Open file - Enable Weld modifier Blender Crashes
Author

Added subscriber: @GregoryS

Added subscriber: @GregoryS
Gregory changed title from Eevee Render Crash to Render Crash 2020-10-08 17:42:20 +02:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can confirm crash, but the file is too complex. Please simplify it as much as possible by removing objects and other data while making sure file is still crashing.

Exception thrown: read access violation. v1 was 0x1110396CC88175E.

>	blender.exe!copy_vn_vn(float * v0, const float * v1) Line 74	C

 	blender.exe!BLI_kdtree_3d_calc_duplicates_fast(const KDTree_3d * tree, const float range, bool use_index_order, int * duplicates) Line 909	C
 	blender.exe!weldModifier_doWeld(WeldModifierData * wmd, const ModifierEvalContext * ctx, Mesh * mesh) Line 1699	C
 	blender.exe!modifyMesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 1911	C
 	blender.exe!BKE_modifier_modify_mesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * me) Line 1008	C
 	blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, int useDeform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final) Line 1183	C
 	blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1801	C
 	blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1922	C
 	blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 194	C
 	blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 385	C
 	[External Code]	
 	blender.exe!blender::deg::`anonymous namespace'::evaluate_node(const blender::deg::`anonymous-namespace'::DepsgraphEvalState * state, blender::deg::OperationNode * operation_node) Line 116	C++
 	blender.exe!blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 128	C++
 	blender.exe!Task::()::__l2::<lambda>() Line 118	C++
 	blender.exe!tbb::interface7::internal::delegated_function<void <lambda>(void) const ,void>::operator()() Line 94	C++
 	[External Code]	
 	blender.exe!tbb::interface7::internal::isolate_impl<void,void <lambda>(void) const>(const Task::()::__l2::void <lambda>(void) & f) Line 161	C++
 	blender.exe!tbb::interface7::this_task_arena::isolate<void <lambda>(void)>(const Task::()::__l2::void <lambda>(void) & f) Line 396	C++
 	blender.exe!Task::operator()() Line 122	C++
 	blender.exe!tbb::internal::function_task<Task>::execute() Line 1049	C++
 	[External Code]	
Can confirm crash, but the file is too complex. Please simplify it as much as possible by removing objects and other data while making sure file is still crashing. `Exception thrown: read access violation. v1 was 0x1110396CC88175E.` ``` > blender.exe!copy_vn_vn(float * v0, const float * v1) Line 74 C blender.exe!BLI_kdtree_3d_calc_duplicates_fast(const KDTree_3d * tree, const float range, bool use_index_order, int * duplicates) Line 909 C blender.exe!weldModifier_doWeld(WeldModifierData * wmd, const ModifierEvalContext * ctx, Mesh * mesh) Line 1699 C blender.exe!modifyMesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 1911 C blender.exe!BKE_modifier_modify_mesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * me) Line 1008 C blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, int useDeform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final) Line 1183 C blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1801 C blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1922 C blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 194 C blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 385 C [External Code] blender.exe!blender::deg::`anonymous namespace'::evaluate_node(const blender::deg::`anonymous-namespace'::DepsgraphEvalState * state, blender::deg::OperationNode * operation_node) Line 116 C++ blender.exe!blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 128 C++ blender.exe!Task::()::__l2::<lambda>() Line 118 C++ blender.exe!tbb::interface7::internal::delegated_function<void <lambda>(void) const ,void>::operator()() Line 94 C++ [External Code] blender.exe!tbb::interface7::internal::isolate_impl<void,void <lambda>(void) const>(const Task::()::__l2::void <lambda>(void) & f) Line 161 C++ blender.exe!tbb::interface7::this_task_arena::isolate<void <lambda>(void)>(const Task::()::__l2::void <lambda>(void) & f) Line 396 C++ blender.exe!Task::operator()() Line 122 C++ blender.exe!tbb::internal::function_task<Task>::execute() Line 1049 C++ [External Code] ```
Author

In #81467#1031127, @iss wrote:
Can confirm crash, but the file is too complex. Please simplify it as much as possible by removing objects and other data while making sure file is still crashing.

Exception thrown: read access violation. v1 was 0x1110396CC88175E.

>	blender.exe!copy_vn_vn(float * v0, const float * v1) Line 74	C

blender.exe!BLI_kdtree_3d_calc_duplicates_fast(const KDTree_3d * tree, const float range, bool use_index_order, int * duplicates) Line 909 C
blender.exe!weldModifier_doWeld(WeldModifierData * wmd, const ModifierEvalContext * ctx, Mesh * mesh) Line 1699 C
blender.exe!modifyMesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 1911 C
blender.exe!BKE_modifier_modify_mesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * me) Line 1008 C
blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, int useDeform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final) Line 1183 C
blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1801 C
blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1922 C
blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 194 C
blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 385 C
[External Code]
blender.exe!blender::deg::anonymous namespace'::evaluate_node(const blender::deg::anonymous-namespace'::DepsgraphEvalState * state, blender::deg::OperationNode * operation_node) Line 116 C++
blender.exe!blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 128 C++
blender.exe!Task::()::__l2::() Line 118 C++
blender.exe!tbb::interface7::internal::delegated_function<void (void) const ,void>::operator()() Line 94 C++
[External Code]
blender.exe!tbb::interface7::internal::isolate_impl<void,void (void) const>(const Task::()::__l2::void (void) & f) Line 161 C++
blender.exe!tbb::interface7::this_task_arena::isolate<void (void)>(const Task::()::__l2::void (void) & f) Line 396 C++
blender.exe!Task::operator()() Line 122 C++
blender.exe!tbb::internal::function_task::execute() Line 1049 C++
[External Code]

Imperator_005.blend

Сrash is associated with the modifier Boolean in object "Small_Letters". If off modifier from render, Blender dont crash

> In #81467#1031127, @iss wrote: > Can confirm crash, but the file is too complex. Please simplify it as much as possible by removing objects and other data while making sure file is still crashing. > > `Exception thrown: read access violation. v1 was 0x1110396CC88175E.` > > ``` >> blender.exe!copy_vn_vn(float * v0, const float * v1) Line 74 C > blender.exe!BLI_kdtree_3d_calc_duplicates_fast(const KDTree_3d * tree, const float range, bool use_index_order, int * duplicates) Line 909 C > blender.exe!weldModifier_doWeld(WeldModifierData * wmd, const ModifierEvalContext * ctx, Mesh * mesh) Line 1699 C > blender.exe!modifyMesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 1911 C > blender.exe!BKE_modifier_modify_mesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * me) Line 1008 C > blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, int useDeform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final) Line 1183 C > blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1801 C > blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1922 C > blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 194 C > blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 385 C > [External Code] > blender.exe!blender::deg::`anonymous namespace'::evaluate_node(const blender::deg::`anonymous-namespace'::DepsgraphEvalState * state, blender::deg::OperationNode * operation_node) Line 116 C++ > blender.exe!blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 128 C++ > blender.exe!Task::()::__l2::<lambda>() Line 118 C++ > blender.exe!tbb::interface7::internal::delegated_function<void <lambda>(void) const ,void>::operator()() Line 94 C++ > [External Code] > blender.exe!tbb::interface7::internal::isolate_impl<void,void <lambda>(void) const>(const Task::()::__l2::void <lambda>(void) & f) Line 161 C++ > blender.exe!tbb::interface7::this_task_arena::isolate<void <lambda>(void)>(const Task::()::__l2::void <lambda>(void) & f) Line 396 C++ > blender.exe!Task::operator()() Line 122 C++ > blender.exe!tbb::internal::function_task<Task>::execute() Line 1049 C++ > [External Code] > ``` [Imperator_005.blend](https://archive.blender.org/developer/F8972103/Imperator_005.blend) Сrash is associated with the modifier Boolean in object "Small_Letters". If off modifier from render, Blender dont crash
Richard Antalik changed title from Render Crash to Crash in weld modifier 2020-10-12 16:03:35 +02:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Henrik D. was assigned by Germano Cavalcante 2020-10-12 17:43:29 +02:00

This issue was referenced by 8335c26119

This issue was referenced by 8335c26119bf5ba78b2afa4e2f65bb3d04b42abe

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81467
No description provided.